feat(selection): Ajouter la gestion de la sélection de société pour les utilisateurs
- Ajout de la classe SocieteSelection et du DTO associé pour gérer la sélection de société.
- Mise à jour de UserContextDTO pour inclure la sélection de société.
- Modification de UserContextService pour intégrer la logique de sélection de société.
- Mise à jour des tests pour couvrir les nouveaux cas d'utilisation liés à la sélection de société.
- Ajout de la migration SQL pour créer la table societe_selections.
- Mise à jour de l'API spécification pour refléter les changements dans le modèle de données.