@@ -1,27 +1,26 @@
 package com.webelec.backend.service;
 
-import com.webelec.backend.dto.NotificationSummaryDTO;
-import com.webelec.backend.dto.RgieHabilitationDTO;
 import com.webelec.backend.dto.RgieHabilitationStatus;
-import com.webelec.backend.dto.TeamAssignmentDTO;
 import com.webelec.backend.dto.UserContextDTO;
 import com.webelec.backend.exception.ResourceNotFoundException;
 import com.webelec.backend.model.RgieHabilitation;
+import com.webelec.backend.model.SocieteSelection;
 import com.webelec.backend.model.TechnicianTeamAssignment;
 import com.webelec.backend.model.UserSocieteRole;
 import com.webelec.backend.model.Utilisateur;
 import com.webelec.backend.repository.RgieHabilitationRepository;
+import com.webelec.backend.repository.SocieteSelectionRepository;
 import com.webelec.backend.repository.TechnicianTeamAssignmentRepository;
 import com.webelec.backend.repository.UserNotificationRepository;
 import com.webelec.backend.repository.UtilisateurRepository;
+import com.webelec.backend.service.context.UserContext;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.ZoneOffset;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -30,16 +29,19 @@ import java.util.stream.Collectors;
 public class UserContextService {
 
     private final UtilisateurRepository utilisateurRepository;
-    private final RgieHabilitationRepository rgieHabilitationRepository;
+        private final RgieHabilitationRepository rgieHabilitationRepository;
+        private final SocieteSelectionRepository societeSelectionRepository;
     private final TechnicianTeamAssignmentRepository technicianTeamAssignmentRepository;
     private final UserNotificationRepository userNotificationRepository;
 
     public UserContextService(UtilisateurRepository utilisateurRepository,
                               RgieHabilitationRepository rgieHabilitationRepository,
+                      SocieteSelectionRepository societeSelectionRepository,
                               TechnicianTeamAssignmentRepository technicianTeamAssignmentRepository,
                               UserNotificationRepository userNotificationRepository) {
         this.utilisateurRepository = utilisateurRepository;
         this.rgieHabilitationRepository = rgieHabilitationRepository;
+        this.societeSelectionRepository = societeSelectionRepository;
         this.technicianTeamAssignmentRepository = technicianTeamAssignmentRepository;
         this.userNotificationRepository = userNotificationRepository;
     }
@@ -49,58 +51,60 @@ public class UserContextService {
                 .orElseThrow(() -> new ResourceNotFoundException("Technicien non trouvé"));
 
         LocalDate today = LocalDate.now(ZoneOffset.UTC);
-        List<RgieHabilitationDTO> habilitations = rgieHabilitationRepository.findByUtilisateurId(utilisateurId).stream()
-                .map(entity -> toDto(entity, today))
+        List<UserContext.Habilitation> habilitations = rgieHabilitationRepository.findByUtilisateurId(utilisateurId).stream()
+            .map(entity -> toHabilitation(entity, today))
                 .toList();
 
-        TeamAssignmentDTO teamAssignment = technicianTeamAssignmentRepository
+        UserContext.TeamAssignment teamAssignment = technicianTeamAssignmentRepository
                 .findFirstByUtilisateurIdAndEndedAtIsNullOrderByAssignedAtDesc(utilisateurId)
-                .map(this::toDto)
+            .map(this::toTeamAssignment)
                 .orElse(null);
 
         long unreadNotifications = userNotificationRepository.countByUtilisateurIdAndReadFalse(utilisateurId);
         long criticalNotifications = habilitations.stream()
-                .filter(dto -> dto.getStatus() == RgieHabilitationStatus.TO_RENEW
-                        || dto.getStatus() == RgieHabilitationStatus.EXPIRED)
+            .filter(dto -> dto.status() == RgieHabilitationStatus.TO_RENEW
+                || dto.status() == RgieHabilitationStatus.EXPIRED)
                 .count();
 
-        NotificationSummaryDTO notificationSummary = new NotificationSummaryDTO(
-                unreadNotifications,
-                criticalNotifications
+        UserContext.NotificationSummary notificationSummary = new UserContext.NotificationSummary(
+            unreadNotifications,
+            criticalNotifications
         );
 
-        return UserContextDTO.builder()
-                .userId(utilisateur.getId())
-                .fullName(buildFullName(utilisateur))
-                .email(utilisateur.getEmail())
-                .role(resolveRole(utilisateur))
-                .team(teamAssignment)
-                .habilitations(habilitations)
-                .notifications(notificationSummary)
-                .build();
+        UserContext userContext = new UserContext(
+            utilisateur.getId(),
+            buildFullName(utilisateur),
+            utilisateur.getEmail(),
+            resolveSelection(utilisateur),
+            teamAssignment,
+            habilitations,
+            notificationSummary
+        );
+
+        return UserContextDTO.from(userContext);
     }
 
-    private RgieHabilitationDTO toDto(RgieHabilitation entity, LocalDate referenceDate) {
+        private UserContext.Habilitation toHabilitation(RgieHabilitation entity, LocalDate referenceDate) {
         RgieHabilitationStatus status = computeStatus(entity.getValidUntil(), referenceDate);
-        return new RgieHabilitationDTO(
-                entity.getId(),
-                entity.getLabel(),
-                entity.getCertificateNumber(),
-                entity.getAuthorityLevel(),
-                entity.getValidFrom(),
-                entity.getValidUntil(),
-                status
+        return new UserContext.Habilitation(
+            entity.getId(),
+            entity.getLabel(),
+            entity.getCertificateNumber(),
+            entity.getAuthorityLevel(),
+            entity.getValidFrom(),
+            entity.getValidUntil(),
+            status
         );
     }
 
-    private TeamAssignmentDTO toDto(TechnicianTeamAssignment assignment) {
+        private UserContext.TeamAssignment toTeamAssignment(TechnicianTeamAssignment assignment) {
         if (assignment == null) {
             return null;
         }
         var team = assignment.getTeam();
         Long teamId = team != null ? team.getId() : null;
         String teamName = team != null ? team.getName() : null;
-        return new TeamAssignmentDTO(teamId, teamName, assignment.getAssignedAt());
+        return new UserContext.TeamAssignment(teamId, teamName, assignment.getAssignedAt());
     }
 
     private RgieHabilitationStatus computeStatus(LocalDate validUntil, LocalDate referenceDate) {
@@ -116,17 +120,43 @@ public class UserContextService {
         return RgieHabilitationStatus.VALID;
     }
 
-    private String resolveRole(Utilisateur utilisateur) {
+        private UserContext.Selection resolveSelection(Utilisateur utilisateur) {
+        return societeSelectionRepository
+            .findFirstByUtilisateurIdOrderBySelectedAtDesc(utilisateur.getId())
+            .map(this::toSelection)
+            .orElseGet(() -> fallbackSelection(utilisateur));
+        }
+
+        private UserContext.Selection toSelection(SocieteSelection selection) {
+        if (selection == null) {
+            return null;
+        }
+        var societe = selection.getSociete();
+        Long societeId = societe != null ? societe.getId() : null;
+        String societeName = societe != null ? societe.getNom() : null;
+        return new UserContext.Selection(
+            societeId,
+            societeName,
+            selection.getRole(),
+            selection.getSelectedAt()
+        );
+        }
+
+        private UserContext.Selection fallbackSelection(Utilisateur utilisateur) {
         List<UserSocieteRole> societes = Optional.ofNullable(utilisateur.getSocietes())
-                .orElse(Collections.emptyList());
+            .orElse(List.of());
         return societes.stream()
-                .map(UserSocieteRole::getRole)
-                .filter(Objects::nonNull)
-                .findFirst()
-                .or(() -> Optional.ofNullable(utilisateur.getRole()))
-                .map(Enum::name)
-                .orElse(null);
-    }
+            .filter(link -> link.getSociete() != null)
+            .sorted(Comparator.comparing(link -> link.getSociete().getId(), Comparator.nullsLast(Long::compareTo)))
+            .map(link -> new UserContext.Selection(
+                link.getSociete().getId(),
+                link.getSociete().getNom(),
+                link.getRole(),
+                null
+            ))
+            .findFirst()
+            .orElse(null);
+        }
 
     private String buildFullName(Utilisateur utilisateur) {
         return java.util.stream.Stream.of(utilisateur.getPrenom(), utilisateur.getNom())
